<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="appName">My App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="myName">Neilven Mascarinas</string>
    <string name="mySection">BSI/T 3C</string>
    <string name="myAppName">MyFirstApp</string>
    <string name="title_activity_mymain">MyFirstApp</string>
    <string name="title_activity_about">About</string>
    <string name="aboutText">About the App</string>
    <string name="aboutContent">I created my first app with basic functions. It\'s a simple start, but it\'s a big achievement for me in learning to create mobile application.</string>
    <string name="backButton">Go Back</string>
    <string name="mainAboutButton">About App</string>

</resources>
